# mlir-template

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICES.txt  README.md
benchmark/: CMakeLists.txt  aEmpty.cpp  bEmpty.cpp
include/: CMakeLists.txt
include/Dialect/: CMakeLists.txt  StandaloneDialect.h  StandaloneOps.h
include/Pipeline/: Pipelines.h
include/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt  StandaloneDialect.cpp  StandaloneOps.cpp
lib/Pipeline/: CMakeLists.txt  Pipelines.cpp
lib/Transforms/: CMakeLists.txt  StandaloneDummyPass.cpp
scripts/: build-sanitizer.sh  build.sh  format_code.sh  install.sh  rename-project.sh  rename_project.py  run-tests.sh  vars.sh
tools/: CMakeLists.txt
tools/standalone-opt/: CMakeLists.txt  standalone-opt.cpp
unittest/: CMakeLists.txt  tDummy.cpp  tRenameProject.cpp
